Updated assignment for lab 8

--- a/Labguide/Overview.html
+++ b/Labguide/Overview.html
@@ -411,8 +411,8 @@ domains of Kubernetes, gearing up with the right toolkit to solve complex produc
             <td>9<b> . </b>Design your deployment
 
                 <br>
-               &nbsp &nbsp<a  href="08.1-Assignment.html#" target="_blank" rel="noopener">Pages Microservice</a><br>
-                &nbsp &nbsp<a href="08.2-Assignment.html#" target="_blank" rel="noopener">Category Microservice</a>
+               &nbsp &nbsp<a  href="08.1-Assignment.html#" target="_blank" rel="noopener">Category Microservice</a><br>
+                &nbsp &nbsp<a href="08.2-Assignment.html#" target="_blank" rel="noopener">Pages Microservice</a>
             </td>
             <td>10<b> . </b><a href="09.html#" target="_blank" rel="noopener">Helmify</a></td>
         </tr>
