updated assignments with copy buttons

--- a/Labguide/08.1-Assignment.html
+++ b/Labguide/08.1-Assignment.html
@@ -413,6 +413,9 @@ table {
 <div class="olist arabic">
 <ol class="arabic">
 <li>
+<p>Delete the contents of <code>~/workspace/kubernetes-manifests</code> directory</p>
+</li>
+<li>
 <p>Download <a href="https://cloud-native-labs.s3.ap-south-1.amazonaws.com/J21/tailorlabguide/category.zip" target="_blank" rel="noopener">category microservice manifest files</a> and extract to <code>~/workspace/kubernetes-manifests/category</code></p>
 </li>
 <li>
@@ -518,5 +521,7 @@ kubectl get service category</code></pre>
 </div>
 </div>
 </div>
+<script src="jquery-3.5.1.min.js"></script>
+<script src="copy.js"></script>
 </body>
 </html>
