--- a/Labguide/08.2-Assignment.html
+++ b/Labguide/08.2-Assignment.html
@@ -441,9 +441,6 @@ In order to complete the design:</p>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Delete the contents of <code>~/workspace/kubernetes-manifests</code> directory</p>
-</li>
-<li>
 <p>Download <a href="https://cloud-native-labs.s3.ap-south-1.amazonaws.com/J21/tailorlabguide/pages.zip" target="_blank" rel="noopener">pages microservice manifest files</a> and extract to <code>~/workspace/kubernetes-manifests/pages</code></p>
 </li>
 <li>
@@ -532,5 +529,7 @@ But, does it work as expected? Test it using basic curl commands or <code>postma
 </div>
 </div>
 </div>
+<script src="jquery-3.5.1.min.js"></script>
+<script src="copy.js"></script>
 </body>
 </html>
