--- a/Labguide/13.html
+++ b/Labguide/13.html
@@ -521,7 +521,7 @@ table {
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">kubectl get  ns
 kubectl config get-contexts
-kubectl config set-context --current --namespace [name-of-your-team]-dev</code></pre>
+kubectl config set-context --current --namespace [name-of-your-team]</code></pre>
 </div>
 </div>
 </li>
@@ -535,7 +535,7 @@ kubectl config set-context --current --namespace [name-of-your-team]-dev</code><
 <pre class="CodeRay highlight"><code data-lang="shell script">helm template pages
 helm uninstall pagesapp
 helm install pagesapp pages --dry-run --debug
-helm install pagesapp pages -n [name-of-your-team]-dev</code></pre>
+helm install pagesapp pages -n [name-of-your-team]</code></pre>
 </div>
 </div>
 </li>
