--- a/Labguide/14.html
+++ b/Labguide/14.html
@@ -467,7 +467,7 @@ mkdir ~/workspace/helm-charts/scripts</code></pre>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Create the script files for installing <code>kubect`l cli, installing `helm</code>, and deploying the chart to the cluster.</p>
+<p>Create the script files for installing <code>kubectl cli</code>, installing <code>helm</code>, and deploying the chart to the cluster.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell script">touch ~/workspace/helm-charts/scripts/install-kubectl.sh
