Updated labguide for pages assignment lab

--- a/Labguide/08.2-Assignment.html
+++ b/Labguide/08.2-Assignment.html
@@ -509,10 +509,10 @@ kubectl apply -f ~/workspace/kubernetes-manifests/pages/deployment.yaml</code></
 </div>
 </li>
 <li>
-<p>Access the category application</p>
+<p>Access the pages application</p>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">kubectl port-forward svc/category 8080:8080</code></pre>
+<pre class="CodeRay highlight"><code data-lang="shell script">kubectl port-forward svc/pages 8080:8080</code></pre>
 </div>
 </div>
 </li>
