--- a/Labguide/09.html
+++ b/Labguide/09.html
@@ -483,7 +483,7 @@ Copy from the earlier lab or refer below</p>
         <span style="color:#606">app</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">pages</span></span>
     <span style="color:#606">spec</span>:
       <span style="color:#606">containers</span>:
-        - <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">image: [image-from-Lab 01 - Dockerize an Application]/pages:1.0</span></span>
+        - <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">image: dellcloud/pages:1.0</span></span>
           <span style="color:#606">name</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">pages</span></span>
           <span style="color:#606">imagePullPolicy</span>: <span style="background-color:hsla(0,100%,50%,0.05)"><span style="color:#D20">IfNotPresent</span></span>
           <span style="color:#606">ports</span>:
