Updated lab guide

--- a/Labguide/15.html
+++ b/Labguide/15.html
@@ -640,12 +640,15 @@ git push -u origin master</code></pre>
 </div>
 </li>
 <li>
+<p>Before testing, point the kubectl context to the right cluster and namespace</p>
+</li>
+<li>
 <p>Port forward to connect to pages service running inside K8s from the local machine</p>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="shell script">SVC=$(kubectl get svc -l access=external --namespace {{ .Release.Namespace }} -l access=external | awk 'NR==2{print $1}')
+<pre class="CodeRay highlight"><code data-lang="shell script">SVC=$(kubectl get svc -l access=external | awk 'NR==2{print $1}')
 
-kubectl --namespace {{ .Release.Namespace }} port-forward svc/$SVC 8080:8080</code></pre>
+kubectl port-forward svc/$SVC 8080:8080</code></pre>
 </div>
 </div>
 </li>
